--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib~=3.6.2
+matplotlib
 mysql_connector_python
-numpy~=1.23.4
-pandas~=1.5.1
-Pillow~=9.3.0
-streamlit~=1.15.2
-streamlit_option_menu~=0.3.2
+numpy
+pandas
+Pillow
+streamlit
+streamlit_option_menu
