--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#ad54d6"
-backgroundColor="#F3E5E5"
+backgroundColor="#efe8e0"
 secondaryBackgroundColor="#ffffff"
 textColor="#4f4f54"
